Bug 1603854 - nsNotifyAddrListener: Don't call NS_DispatchToMainThread if mShutdown is true r=froydnj

Differential Revision: https://phabricator.services.mozilla.com/D57236

--HG--
extra : moz-landing-system : lando